# CP_violation_simulation

./: .gitignore  CMakeLists.txt  README.md  rename.sh  results.txt
options/: README.md
options/data/mc/: KKpi0_TightCut_2012_MC_2012_Beam4000GeV-2012-MagDown-Nu2.5-Pythia8_Sim08c_Digi13_Trig0x409f0045_Reco14a_Stripping20NoPrescalingFlagged_27163401_ALLSTREAMS.DST.py  KKpi0_TightCut_2012_MC_2012_Beam4000GeV-2012-MagUp-Nu2.5-Pythia8_Sim08c_Digi13_Trig0x409f0045_Reco14a_Stripping20NoPrescalingFlagged_27163401_ALLSTREAMS.DST.py  Kpipi0_DecProdCut_PHSP_2012_MC_2012_Beam4000GeV-2012-MagDown-Nu2.5-Pythia8_Sim08f_Digi13_Trig0x409f0045_Reco14a_Stripping20NoPrescalingFlagged_27163400_ALLSTREAMS.DST.py  Kpipi0_DecProdCut_PHSP_2012_MC_2012_Beam4000GeV-2012-MagUp-Nu2.5-Pythia8_Sim08f_Digi13_Trig0x409f0045_Reco14a_Stripping20NoPrescalingFlagged_27163400_ALLSTREAMS.DST.py  Kpipi0_cocktail_DecProdCut_2015_MC_2015_Beam6500GeV-2015-MagDown-Nu1.6-25ns-Pythia8_Sim09c_Trig0x411400a2_Reco15a_Turbo02_Stripping24r1NoPrescalingFlagged_27263400_ALLSTREAMS.DST.py  Kpipi0_cocktail_DecProdCut_2015_MC_2015_Beam6500GeV-2015-MagUp-Nu1.6-25ns-Pythia8_Sim09c_Trig0x411400a2_Reco15a_Turbo02_Stripping24r1NoPrescalingFlagged_27263400_ALLSTREAMS.DST.py  Kpipi0_cocktail_DecProdCut_2016_MC_2016_Beam6500GeV-2016-MagDown-Nu1.6-25ns-Pythia8_Sim09c_Trig0x6138160F_Reco16_Turbo03_Stripping28r1NoPrescalingFlagged_27263400_ALLSTREAMS.DST.py  (+19 more)
options/ntupling/: StripKiller.py  StrippingDstarD0ToHHPi0.py  minibias.py  stripping.py  tuples.py
python/AGammaD0Tohhpi0/: MCBKPaths_KKpi0_TightCut.py  MCBKPaths_Kpipi0_DecProdCut_Dalitz.py  MCBKPaths_Kpipi0_DecProdCut_PHSP.py  MCBKPaths_Kpipi0_cocktail_DecProdCut.py  MCBKPaths_pipipi0_DecProdCut_Dalitz.py  MCBKPaths_pipipi0_DecProdCut_PHSP.py  Reco16_Charm_MagDown_TupleLFNs.py  Reco16_Charm_MagDown_TupleURLs.py  Reco16_Charm_MagUp_TupleLFNs.py  Reco16_Charm_MagUp_TupleURLs.py  Reco16_Charm_MagUp_URLs.py  data.py  fit.py  selection.py  variables.py  workspace.py
python/TemplateAnalysis/: data.py  fit.py  makeroodataset.py  plot.py  selection.py  variables.py  workspace.py
scripts/: README.md  interactive.py  interactive.sh  plot.C
scripts/data-prep/: addmva.sh  copytree.sh  filtermc.py  filtermc.sh  get-data.sh  get-lumi.py  get-minibias-data.py  get-tuple-urls.py  getdata.py  getmcdata.py  mergetrees.sh  trimtuples.py
scripts/deltam/: bkg-deltam.py  slices.py
scripts/ganga/: ganga.py  ganga.sh  minibias.py  minibias.sh
scripts/mint/: 2Dplot.C  SConstruct  ampFit.cpp  install-mint.sh  mint-env.sh  pipipi0.txt  plot.C  plot.py  plot.sh  plotTime.C  submit-scan.py  uninstall-mint.sh  uninstall-scons.sh
scripts/ntupling/: calcnorm.py  test.sh
tmva/: README.md
tmva/20180327-Theodora/: TMVAClassification_BDT.weights.xml  TMVAClassification_BDT.weights_ALL.xml  notes.txt
tmva/20180702-Lewis/: TMVAClassification_BDT_Kpipi0.class.C  TMVAClassification_BDT_Kpipi0.weights.xml
(+29 files in other folders)
